--- a/catalog.html
+++ b/catalog.html
@@ -9,10 +9,10 @@
 </head>
 
 <body>
-  <header>
+  <header class="main-header">
     <div class="header-top">
       <div class="container">
-        <a class="header-logo" href="index.html" title="На главную страницу"><img src="img/logo-technomart.svg" alt="техномарт"></a>
+        <a class="header-logo" href="index.html" title="На главную страницу"><img src="img/logo-technomart.svg" alt="техномарт" height="17" width="110"></a>
         <form class="header-top-search">
           <button class="header-top-search-submit" type="submit"></button>
           <input class="header-top-search-input" type="text" name="main-search" placeholder="Поиск:">
@@ -25,7 +25,7 @@
     <div class="header-mid">
       <div class="container">
         <div class="header-mid-inner">
-          <p class="header-mid-title">Интернет-магазин строительных материалов и инструментов для ремонта</p>
+          <p class="header-mid-title">Интернет-магазин строительных материалов<br>и инструментов для ремонта</p>
           <div class="header-contacts">
             <a class="header-tel" href="tel:+78125550555" title="Позвонить нам">+7 (812) 555-05-55
             </a>
@@ -47,8 +47,8 @@
         </div>
         <nav class="main-nav">
           <ul>
-            <li class="main-nav-item"><a href="#">Главная</a></li>
-            <li class="main-nav-item"><a href="catalog.html">Каталог</a></li>
+            <li class="main-nav-item"><a href="index.html">Главная</a></li>
+            <li class="main-nav-item"><a href="">Каталог</a></li>
             <li class="main-nav-item"><a href="#">Компания</a></li>
             <li class="main-nav-item"><a href="#">Новости</a></li>
             <li class="main-nav-item"><a href="#">Спецпредложения</a></li>
@@ -74,21 +74,21 @@
         <form class="catalog-filter-form" action="https://echo.htmlacademy.ru">
           <strong class="catalog-filter-title">фильтр:</strong>
           <fieldset class="catalog-filter-price">
-            <legend>цена:</legend>
-            <input type="range">
+            <legend class="catalog-filter-price-legend">цена:</legend>
+            <input class="catalog-filter-price-range" type="range" multiple min="0" max="3500" step="1" tabindex="0">
           </fieldset>
           <fieldset class="catalog-filter-brand">
-            <legend>производители:</legend>
-            <input type="checkbox" name="checkbox-bosch" id="checkbox-bosch" checked><label for="checkbox-bosch">bosch</label>
-            <input type="checkbox" name="checkbox-interscol" id="checkbox-interscol" disabled><label for="checkbox-interscol">интерскол</label>
-            <input type="checkbox" name="checkbox-makita" id="checkbox-makita" checked><label for="checkbox-makita">makita</label>
-            <input type="checkbox" name="checkbox-dewalt" id="checkbox-dewalt"><label for="checkbox-dewalt">dewalt</label>
-            <input type="checkbox" name="checkbox-hitachi" id="checkbox-hitachi"><label for="checkbox-hitachi">hitachi</label>
+            <legend class="catalog-filter-brand-legend">производители:</legend>
+            <input class="catalog-filter-brand-input" type="checkbox" name="checkbox-bosch" id="checkbox-bosch" checked><label for="checkbox-bosch" tabindex="0">bosch</label>
+            <input type="checkbox" name="checkbox-interscol" id="checkbox-interscol" disabled><label for="checkbox-interscol" tabindex="0">интерскол</label>
+            <input type="checkbox" name="checkbox-makita" id="checkbox-makita" checked><label for="checkbox-makita" tabindex="0">makita</label>
+            <input type="checkbox" name="checkbox-dewalt" id="checkbox-dewalt"><label for="checkbox-dewalt" tabindex="0">dewalt</label>
+            <input type="checkbox" name="checkbox-hitachi" id="checkbox-hitachi"><label for="checkbox-hitachi" tabindex="0">hitachi</label>
           </fieldset>
           <fieldset class="catalog-filter-power">
-            <legend>питание:</legend>
-            <input type="radio" name="radio-power" id="radio-accumulators" checked><label for="radio-accumulators">аккумуляторные</label>
-            <input type="radio" name="radio-power" id="radio-wired"><label for="radio-wired">сетевые</label>
+            <legend class="catalog-filter-power-legend">питание:</legend>
+            <input type="radio" name="radio-power" id="radio-accumulators" checked><label class="catalog-filter-power-label" for="radio-accumulators" tabindex="0">аккумуляторные</label>
+            <input type="radio" name="radio-power" id="radio-wired"><label class="catalog-filter-power-label" for="radio-wired" tabindex="0">сетевые</label>
           </fieldset>
           <input class="catalog-filter-submit" type="submit" name="submit" id="submit" value="показать">
         </form>
@@ -134,7 +134,7 @@
             </div>
           </li>
           <li class="catalog-item">
-            <img src="img/perforator_2_218x170.jpg" width="218" height="170" alt="BOSCH BFG 3000" class="catalog-item-img">
+            <img src="img/perforator_1_218x170.jpg" width="218" height="170" alt="BOSCH BFG 3000" class="catalog-item-img">
             <h3 class="catalog-item-title">Перфоратор BOSCH BFG 3000</h3>
             <span class="goods-old-price">22500 р.</span>
             <a class="catalog-item-price primary-btn" href="#">15500 р.</a>
@@ -144,7 +144,7 @@
             </div>
           </li>
           <li class="catalog-item item-new">
-            <img src="img/perforator_1_218x170.jpg" width="218" height="170" alt="BOSCH BFG 6000" class="catalog-item-img">
+            <img src="img/perforator_2_218x170.jpg" width="218" height="170" alt="BOSCH BFG 6000" class="catalog-item-img">
             <h3 class="catalog-item-title">Перфоратор BOSCH BFG 6000</h3>
             <span class="goods-old-price">30500 р.</span>
             <a class="catalog-item-price primary-btn" href="#">25500 р.</a>
@@ -154,7 +154,7 @@
             </div>
           </li>
           <li class="catalog-item">
-            <img src="img/perforator_2_218x170.jpg" width="218" height="170" alt="BOSCH BFG 2000" class="catalog-item-img">
+            <img src="img/perforator_1_218x170.jpg" width="218" height="170" alt="BOSCH BFG 2000" class="catalog-item-img">
             <h3 class="catalog-item-title">Перфоратор BOSCH BFG 2000</h3>
             <span class="goods-old-price"></span>
             <a class="catalog-item-price primary-btn" href="#">12500 р.</a>
@@ -202,11 +202,19 @@
         </div>
       </div>
     </section>
+    <div class="good-to-know">
+        <div class="good-to-know-container container">
+            <h2 class="good-to-know-title">пара слов о перфораторах</h2>
+            <p>Перфоратор — универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне.</p>
+            <p>Существуют электромеханические и пневматические перфораторы. Современные модели могут выполнять функции дрели, шуруповерта и отбойного молотка. В ассортиментном ряду есть выбор «трехрежимников»: в одном устройстве будут совмещены отбойный молоток и ударная дрель.</p>
+
+        </div>
+    </div>
   </main>
   <footer class="main-footer">
     <div class="container">
       <div class="footer-top">
-        <a class="footer-logo" href="#" title="В начало страницы"><img src="img/logo-technomart.svg" alt="техномарт"></a>
+        <a class="footer-logo" href="index.html" title="В начало страницы"><img src="img/logo-technomart.svg" alt="техномарт"></a>
         <nav class="footer-nav">
           <ul class="footer-nav-list">
             <li class="footer-nav-item"><a href="#">Компания</a></li>
@@ -229,14 +237,14 @@
     </div>
     <div class="footer-bot">
       <div class="container">
-        <p class="footer-copyright">2010-2019 Компания "Техномарт" Все права защищены</p>
+        <p class="footer-copyright">&copy; 2010-2019 Компания «Техномарт» Все права защищены</p>
         <p class="footer-socials">
           <a class="footer-socials-vk" href="#" title="Мы во ВКонтакте"><span class="visually-hidden">Мы во ВКонтакте</span></a>
           <a class="footer-socials-fb" href="#" title="Мы на Фейсбук"><span class="visually-hidden">Мы на Фейсбук</span></a>
           <a class="footer-socials-instagram" href="#" title="Мы в Инстаграм"><span class="visually-hidden">Мы в Инстаграм</span></a>
         </p>
         <p class="footer-mail">Обратная связь: <a href="mail@htmlacademy.ru">mail@htmlacademy.ru</a></p>
-        <p class="footer-academy">Разработано -<a href="http://www.htmlacademy.ru" target="_blank">htmlacademy.ru</a></p>
+        <p class="footer-academy">Разработано -<a href="https://htmlacademy.ru/intensive/htmlcss" target="_blank">htmlacademy.ru</a></p>
       </div>
     </div>
   </footer>
