--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <header class="main-header">
     <div class="header-top">
       <div class="container">
-        <a class="header-logo" href="index.html" title="Обновить страницу"><img src="img/logo-technomart.svg" alt="техномарт"></a>
+        <a class="header-logo" href="index.html" title="Обновить страницу"><img src="img/logo-technomart.svg" height="17" width="110" alt="техномарт"></a>
         <form class="header-top-search">
           <input class="header-top-search-input" type="text" name="main-search" placeholder="Поиск:">
           <button class="header-top-search-submit" type="submit"></button>
@@ -25,7 +25,7 @@
     <div class="header-mid">
       <div class="container">
         <div class="header-mid-inner">
-          <h1 class="header-mid-title">Интернет-магазин строительных материалов и инструментов для ремонта</h1>
+          <h1 class="header-mid-title">Интернет-магазин строительных материалов<br>и инструментов для ремонта</h1>
           <div class="header-contacts">
             <a class="header-tel" href="tel:+78125550555" title="Позвонить нам">+7 (812) 555-05-55</a>
             <p class="header-adress">
@@ -40,9 +40,9 @@
         </div>
         <nav class="main-nav">
           <ul>
-            <li class="main-nav-item"><a href="#">Главная</a></li>
-            <li class="main-nav-item"><a href="catalog.html">Каталог</a></li>
+            <li class="main-nav-item"><a href="">Главная</a></li>
             <li class="main-nav-item"><a href="#">Компания</a></li>
+            <li class="main-nav-item"><a href="catalog.html">Каталог</a></li>
             <li class="main-nav-item"><a href="#">Новости</a></li>
             <li class="main-nav-item"><a href="#">Спецпредложения</a></li>
             <li class="main-nav-item"><a href="#">Доставка</a></li>
@@ -69,12 +69,12 @@
             <div class="categories-slider-slide categories-slider-slide-1">
               <b>дрели</b>
               <p>Соседям на радость!</p>
-              <a href="#" class="primary-btn">открыть каталог</a>
+              <a href="catalog.html" class="primary-btn">открыть каталог</a>
             </div>
             <div class="categories-slider-slide categories-slider-slide-2">
               <b>перфораторы</b>
               <p>Настоящие мужские игрушки</p>
-              <a href="#" class="primary-btn">открыть каталог</a>
+              <a href="catalog.html" class="primary-btn">открыть каталог</a>
             </div>
             <input class="categories-slider-toggle-1" type="radio" name="categories-slider-toggle" checked>
             <input class="categories-slider-toggle-2" type="radio" name="categories-slider-toggle">
@@ -110,24 +110,40 @@
           <h3>Перфоратор BOSCH BFG 9000</h3>
           <span class="goods-old-price">32500 р.</span>
           <a class="popular-goods-price primary-btn" href="#">25500 р.</a>
+          <div class="catalog-item-popup">
+            <a class="catalog-item-popup-buy" href="#">купить</a>
+            <a class="catalog-item-popup-bookmarks" href="#">в закладки</a>
+          </div>
         </li>
         <li class="popular-goods-item">
           <img src="img/perforator_1_218x170.jpg" width="218" height="170" alt="BFG 3000">
           <h3>Перфоратор BOSCH BFG 3000</h3>
           <span class="goods-old-price">22500 р.</span>
           <a class="popular-goods-price primary-btn" href="#">15500 р.</a>
+          <div class="catalog-item-popup">
+            <a class="catalog-item-popup-buy" href="#">купить</a>
+            <a class="catalog-item-popup-bookmarks" href="#">в закладки</a>
+          </div>
         </li>
         <li class="popular-goods-item">
           <img src="img/perforator_2_218x170.jpg" width="218" height="170" alt="BFG 6000">
           <h3>Перфоратор BOSCH BFG 6000</h3>
           <span class="goods-old-price">30500 р.</span>
           <a class="popular-goods-price primary-btn" href="#">25500 р.</a>
+          <div class="catalog-item-popup">
+            <a class="catalog-item-popup-buy" href="#">купить</a>
+            <a class="catalog-item-popup-bookmarks" href="#">в закладки</a>
+          </div>
         </li>
         <li class="popular-goods-item item-new">
           <img src="img/perforator_1_218x170.jpg" width="218" height="170" alt="BFG 2000">
           <h3>Перфоратор BOSCH BFG 2000</h3>
           <span class="goods-old-price"></span>
           <a class="popular-goods-price primary-btn" href="#">12500 р.</a>
+          <div class="catalog-item-popup">
+            <a class="catalog-item-popup-buy" href="#">купить</a>
+            <a class="catalog-item-popup-bookmarks" href="#">в закладки</a>
+          </div>
         </li>
       </ul>
     </section>
@@ -138,12 +154,6 @@
         <a class="popular-brands-all primary-btn" href="#">все производители</a>
       </p>
       <ul class="popular-brands-list">
-        <li class="popular-brands-item">
-          <a href="#"><img src="img/bosch_126x37.jpg" width="126" height="37" alt="BOSCH"></a>
-        </li>
-        <li class="popular-brands-item">
-          <a href="#"><img src="img/bosch_126x37.jpg" width="126" height="37" alt="BOSCH"></a>
-        </li>
         <li class="popular-brands-item">
           <a href="#"><img src="img/bosch_126x37.jpg" width="126" height="37" alt="BOSCH"></a>
         </li>
@@ -179,9 +189,9 @@
           <input id="warranty" type="radio" name="service-slider">
           <input id="credit" type="radio" name="service-slider">
           <div class="slider-btns">
-            <label class="service-slider-btn service-btn-delivery" for="delivery">Доставку</label>
-            <label class="service-slider-btn service-btn-warranty" for="warranty">Гарантия</label>
-            <label class="service-slider-btn service-btn-credit" for="credit">Кредит</label>
+            <label class="service-slider-btn service-btn-delivery" for="delivery" tabindex="0">Доставкa</label>
+            <label class="service-slider-btn service-btn-warranty" for="warranty" tabindex="0">Гарантия</label>
+            <label class="service-slider-btn service-btn-credit" for="credit" tabindex="0">Кредит</label>
           </div>
           <div class="service-slider-description service-slider-delivery">
             <span>доставка</span>
@@ -208,7 +218,7 @@
       <div class="container">
         <div class="about-company">
           <h2 class="visually-hidden">о нашей компании</h2>
-          <strong class="about-company-title">компания "техномарт"</strong>
+          <strong class="about-company-title">компания «техномарт»</strong>
           <p class="about-company-description">Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах. </p>
           <p class="about-company-propose">
             Мы можем доставить ваш товар в самые отдаленные точки России!
@@ -223,7 +233,7 @@
         <div class="about-contacts">
           <strong class="about-contacts-title">контакты</strong>
           <p class="about-contacts-description">Вы можете забрать товар сами, заехав в наш офис:</p>
-          <a class="about-contacts-map" href="#"><img src="img/find-us-map_300x158.jpg" width="300" height="158" alt="Схема подъезда"></a>
+          <a class="about-contacts-map" href="https://goo.gl/maps/Ut9eMTGzKwP2" target="_blank"><img src="img/find-us-map_300x158.jpg" width="300" height="158" alt="Схема подъезда"></a>
           <a class="primary-btn about-contacts-btn" href="#">заблудились? напишите нам</a>
         </div>
       </div>
@@ -255,20 +265,19 @@
     </div>
     <div class="footer-bot">
       <div class="container">
-        <p class="footer-copyright">2010-2019 Компания "Техномарт" Все права защищены</p>
+        <p class="footer-copyright">&copy; 2010-2019 Компания «Техномарт» Все права защищены</p>
         <p class="footer-socials">
           <a class="footer-socials-vk" href="#" title="Мы во ВКонтакте"><span class="visually-hidden">Мы во ВКонтакте</span></a>
           <a class="footer-socials-fb" href="#" title="Мы на Фейсбук"><span class="visually-hidden">Мы на Фейсбук</span></a>
           <a class="footer-socials-instagram" href="#" title="Мы в Инстаграм"><span class="visually-hidden">Мы в Инстаграм</span></a>
         </p>
         <p class="footer-mail">Обратная связь: <a href="mail@htmlacademy.ru">mail@htmlacademy.ru</a></p>
-        <p class="footer-academy">Разработано -<a href="http://www.htmlacademy.ru" target="_blank">htmlacademy.ru</a></p>
+        <p class="footer-academy">Разработано -<a href="https://htmlacademy.ru/intensive/htmlcss" target="_blank">htmlacademy.ru</a></p>
       </div>
     </div>
   </footer>
   <div class="popup-modal popup-modal-map">
     <div class="popup-map-wrap">
-      <h2 class="visually-hidden">Как к нам попасть</h2>
       <a href="www.maps.google.com">
         <img src="img/popup-map.jpg" width="940" height="446" alt="Наш адрес: Санкт-петербург, улица большая конюшенная, дом 19">
       </a>
@@ -279,7 +288,7 @@
     <form class="popup-write-us-form" action="https://echo.htmlacademy.ru">
       <h2 class="visually-hidden">Напишите нам электронное письмо</h2>
       <div class="write-us-name">
-        <label for="write-us-name-label">Ваше имя:</label>
+        <label for="write-us-name">Ваше имя:</label>
         <input class="write-us-name-input" type="text" name="write-us-name" id="write-us-name" placeholder="Имя Фамилия" required>
       </div>
       <div class="write-us-mail">
@@ -294,10 +303,16 @@
       <button class="popup-close-btn popup-close-btn-write-us">закрыть</button>
     </form>
   </div>
-  <script>
-  document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')
+  <div class="popup popup-cart">
+    <div class="popup-cart-notification">
+      <strong class="popup-cart-notification-headline">Товар добавлен в корзину!</strong>
+      <a href="#" class="primary-btn popup-cart-order">оформить заказ</a>
+      <button class="popup-cart-continue popup-close-btn">продолжить покупки</button>
+    </div>
+    <script>
+    document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')
 
-  </script>
+    </script>
 </body>
 
 </html>
